--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
     <h2 class="skil">Skills</h2>
   <div class="skills">
-        <div class="skill"><img src="/pictures/html-5.png"> <span>HTML</span><div class="bar"><div style="width: 90%"></div></div></div>
-        <div class="skill"> <img src="/pictures/css.png"><span>CSS</span><div class="bar"><div style="width: 85%"></div></div></div>
+        <div class="skill"><img src="pictures/html-5.png"> <span>HTML</span><div class="bar"><div style="width: 90%"></div></div></div>
+        <div class="skill"> <img src="pictures/css.png"><span>CSS</span><div class="bar"><div style="width: 85%"></div></div></div>
         <div class="skill"><img src="/pictures/js.png"><span>JavaScript</span><div class="bar"><div style="width: 80%"></div></div></div>
         <div class="skill"><img src="/pictures/physics.png"><span>React</span><div class="bar"><div style="width: 75%"></div></div></div>
         <div class="skill"><img src="/pictures/ui.png"><span>UI/UX Design</span><div class="bar"><div style="width: 70%"></div></div></div>
