--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
   <div class="skills">
         <div class="skill"><img src="pictures/html-5.png"> <span>HTML</span><div class="bar"><div style="width: 90%"></div></div></div>
         <div class="skill"> <img src="pictures/css.png"><span>CSS</span><div class="bar"><div style="width: 85%"></div></div></div>
-        <div class="skill"><img src="/pictures/js.png"><span>JavaScript</span><div class="bar"><div style="width: 80%"></div></div></div>
-        <div class="skill"><img src="/pictures/physics.png"><span>React</span><div class="bar"><div style="width: 75%"></div></div></div>
-        <div class="skill"><img src="/pictures/ui.png"><span>UI/UX Design</span><div class="bar"><div style="width: 70%"></div></div></div>
-        <div class="skill"><img src="/pictures/java.png"><span>Java</span><div class="bar"><div style="width: 60%"></div></div></div>
+        <div class="skill"><img src="pictures/js.png"><span>JavaScript</span><div class="bar"><div style="width: 80%"></div></div></div>
+        <div class="skill"><img src="pictures/physics.png"><span>React</span><div class="bar"><div style="width: 75%"></div></div></div>
+        <div class="skill"><img src="pictures/ui.png"><span>UI/UX Design</span><div class="bar"><div style="width: 70%"></div></div></div>
+        <div class="skill"><img src="pictures/java.png"><span>Java</span><div class="bar"><div style="width: 60%"></div></div></div>
       </div>
     </div>
     <div class="line"></div>
@@ -63,7 +63,7 @@
     <div class="container3">
       <h2>My Projects</h2>
       <div class="project">
-        <img src="/projects/project1.jpg" alt="Project 1" style="height: 250px;width: 200px;">
+        <img src="projects/project1.jpg" alt="Project 1" style="height: 250px;width: 200px;">
         <div>
           <h3 class="h3">Stone Paper Scissors</h3>
           <p class="p"> Designed and implemented a responsive UI with routing (React Router) and
@@ -72,12 +72,12 @@
  screens and rule navigation.<br>
  Emphasized clean component structure and reusable code for scalability.</p>
           <p class="p1"><strong>Tech:</strong> React.JS</p>
-          <button class="demo-btn" data-video="/video/sps.mp4">Demo</button>
+          <button class="demo-btn" data-video="video/sps.mp4">Demo</button>
 
         </div>
       </div>
       <div class="project">
-        <img src="/projects/project2.png" alt="Project 2" style="width: 20px;">
+        <img src="projects/project2.png" alt="Project 2" style="width: 20px;">
         <div>
           <h3>Clam Meat</h3>
           <p> Developed a multi-page static website allowing users to browse, search, and
@@ -85,40 +85,40 @@
  Focused on visual hierarchy and user-friendly layout using modern CSS
  techniques.</p>
           <p><strong>Tech:</strong> HTML5, CSS3</p>
-           <button class="demo-btn" data-video="/video/clammeat.mp4">Demo</button>
+           <button class="demo-btn" data-video="video/clammeat.mp4">Demo</button>
 
         </div>
       </div>
       <div class="project">
-        <img src="/projects/project3.avif" style="width: 30px;" alt="Project 3">
+        <img src="projects/project3.avif" style="width: 30px;" alt="Project 3">
         <div>
           <h3>Message Posting App </h3>
           <p>Built using HTML, CSS, and vanilla JavaScript.
  Enabled users to post messages with real-time DOM updates for card
  rendering and deletion without page reloads.</p>
           <p><strong>Tech:</strong> HTML5, CSS3, JavaScript</p>
-          <button class="demo-btn" data-video="/video/mpa.mp4">Demo</button>
+          <button class="demo-btn" data-video="video/mpa.mp4">Demo</button>
         </div>
       </div>
     <div class="project">
-        <img src="/projects/project4.jpg" style="width: 30px; height:300px;" alt="Project 3">
+        <img src="projects/project4.jpg" style="width: 30px; height:300px;" alt="Project 3">
         <div>
           <h3>Book hub </h3>
           <p>Book Hub is a responsive online bookstore website built using HTML5 and CSS3, showcasing clean design and user-friendly navigation.
               Using Flexbox, Grid, and media queries, it delivers a consistent experience across devices.</p>
           <p><strong>Tech:</strong> HTML5, CSS3</p>
-          <button class="demo-btn" data-video="/video/bookhub.mp4">Demo</button>
+          <button class="demo-btn" data-video="video/bookhub.mp4">Demo</button>
           
         </div>
       </div>
       <div class="project">
-        <img src="/projects/my logo.png" style="width: 30px; height:300px;" alt="Project 3">
+        <img src="projects/my logo.png" style="width: 30px; height:300px;" alt="Project 3">
         <div>
           <h3>Shopping App </h3>
           <p>Designed a modern, responsive shopping website prototype using Figma, featuring clean UI, intuitive navigation, and optimized user flow from product browsing to checkout. 
              Focused on UX design, mobile-first layout, and consistent visual style for a seamless shopping experience.</p>
           <p><strong>Tech:</strong> Figma</p>
-          <button class="demo-btn" data-video="/video/Rshop.mp4">Demo</button>
+          <button class="demo-btn" data-video="video/Rshop.mp4">Demo</button>
 
 
         </div>
@@ -164,21 +164,21 @@
       <div class="maindiv" style="margin-left: 200px;">
       <div class="fisdiv" style="display: flex; gap: 20px;">
       <div class="contactdet" style="display: flex; gap:20px">
-      <img src="/pictures/mailorg.png" alt="" style="width:30px;height:30px;margin-top: 10px; ;border-radius :50px;">
+      <img src="pictures/mailorg.png" alt="" style="width:30px;height:30px;margin-top: 10px; ;border-radius :50px;">
       <p>dhanushharish77@gmail.com</p>
       </div>
       <div class="contactdet" style="display: flex; gap:20px">
-          <img src="/pictures/location.png" alt="" style="width:30px;height:30px;margin-top:10px;border-radius :50px;">
+          <img src="pictures/location.png" alt="" style="width:30px;height:30px;margin-top:10px;border-radius :50px;">
       <p>Location: Vadapalani, Chennai-600026</p>
       </div>
       </div>
       <div class="secdiv" style="display: flex; gap: 20px;">
       <div class="contactdet" style="display: flex; gap:20px">
-        <img src="/pictures/github.jpeg" alt="" style="width:30px;height:30px;margin-top:10px;border-radius :50px;">
+        <img src="pictures/github.jpeg" alt="" style="width:30px;height:30px;margin-top:10px;border-radius :50px;">
       <p><a href="https://github.com/Dhanushharish" target="_blank">github.com/dhanush</a></p>
       </div>
        <div class="contactdet" style="display:flex; gap:20px;">
-      <img src="/pictures/linkedin.webp" alt="" style="width:40px; height:40px; margin-top:10px; border-radius:50px;">
+      <img src="pictures/linkedin.webp" alt="" style="width:40px; height:40px; margin-top:10px; border-radius:50px;">
        <p> <a href="https://www.linkedin.com/in/dhanush-r-b576b8221/" target="_blank">linkedin.com/dhanush</a></p>
       </div>
       </div>
@@ -204,7 +204,8 @@
       </div>
         <div class="insta">
           <p>
-        <a href="https://www.instagram.com/accounts/login/?hl=en"><img src="pictures/insta.png" alt="insta"style="width:50px; border-radius:50px;">
+        <a href="https://www.instagram.com/accounts/login/?hl=en">
+          <img src="pictures/insta.png" alt="insta"style="width:50px; border-radius:50px;">
         </a></p>
       </div>
         <div class="fb">
