--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
       </div>
       <div class="project">
-        <img src="projects/project2.png" alt="Project 2" style="width: 20px;">
+        <img src="projects/project2.png" alt="Project 2" style="width: 250px;">
         <div>
           <h3>Clam Meat</h3>
           <p> Developed a multi-page static website allowing users to browse, search, and
@@ -90,7 +90,7 @@
         </div>
       </div>
       <div class="project">
-        <img src="projects/project3.avif" style="width: 30px;" alt="Project 3">
+        <img src="projects/project3.avif" style="width: 250px;" alt="Project 3">
         <div>
           <h3>Message Posting App </h3>
           <p>Built using HTML, CSS, and vanilla JavaScript.
@@ -101,7 +101,7 @@
         </div>
       </div>
     <div class="project">
-        <img src="projects/project4.jpg" style="width: 30px; height:300px;" alt="Project 3">
+        <img src="projects/project4.jpg" style="width: 250px; height:300px;" alt="Project 3">
         <div>
           <h3>Book hub </h3>
           <p>Book Hub is a responsive online bookstore website built using HTML5 and CSS3, showcasing clean design and user-friendly navigation.
@@ -112,7 +112,7 @@
         </div>
       </div>
       <div class="project">
-        <img src="projects/my logo.png" style="width: 30px; height:300px;" alt="Project 3">
+        <img src="projects/my logo.png" style="width: 250px; height:300px;" alt="Project 3">
         <div>
           <h3>Shopping App </h3>
           <p>Designed a modern, responsive shopping website prototype using Figma, featuring clean UI, intuitive navigation, and optimized user flow from product browsing to checkout. 
@@ -161,7 +161,7 @@
   <section id="contact">
     <div class="container4">
       <h2>Contact Me</h2>
-      <div class="maindiv" style="margin-left: 200px;">
+      <div class="maindiv" >
       <div class="fisdiv" style="display: flex; gap: 20px;">
       <div class="contactdet" style="display: flex; gap:20px">
       <img src="pictures/mailorg.png" alt="" style="width:30px;height:30px;margin-top: 10px; ;border-radius :50px;">
